[package]
name = "train_schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
prost-types = "0.10"
chrono = "0.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking"] } 

axum = "0.5.16"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.145", features = ["derive"] }

serde_json = { version = "1.0" }


[build-dependencies]
prost-build = { version = "0.11.1" }
